@@ -6,4 +6,4 @@ val clear : unit -> unit
 val is_empty : unit -> bool
 val add : loc:Warnings.loc -> (module LINT.REPORTER) -> unit
 val report : unit -> unit
-val loc_lints:(Warnings.loc * (module LINT.REPORTER) -> 'a) -> 'a Base.Queue.t
+val loc_lints : (Warnings.loc * (module LINT.REPORTER) -> 'a) -> 'a Base.Queue.t
