@@ -9,10 +9,7 @@ let promote_script = fix_dir ^ "promote.sh"
 
 module Error = struct
   let wrong_loc loc =
-    let msg =
-      "Wrong location for replacement.\n\
-      \ Perhaps the linter recognized the construction generated by the preprocess"
-    in
+    let msg = "Wrong location for replacement" in
     let r = Location.error msg ~loc in
     Location.print_report Format.err_formatter r
   ;;
@@ -29,7 +26,7 @@ module Error = struct
 end
 
 let create_file name =
-  match Sys.command (Format.sprintf "echo > %s" name) with
+  match Sys.command (Format.sprintf "touch %s" name) with
   | 0 -> ()
   | _ -> failwith (Error.err_create_file name)
 ;;
@@ -50,8 +47,7 @@ let prepare_env =
 ;;
 
 let add_promote f fgen =
-  let open Pervasives in
-  let oc = open_out_gen [ Open_append; Open_creat ] 0o666 promote_script in
+  let oc = Out_channel.open_gen [ Open_append; Open_creat ] 0o666 promote_script in
   Printf.fprintf oc "cat %s > %s;\n" fgen f;
   close_out oc
 ;;
@@ -76,17 +72,15 @@ let diff f fgen =
 ;;
 
 let write_diff fname diff =
-  let open Pervasives in
-  let oc = open_out_gen [ Open_append; Open_creat ] 0o666 diffs_file in
+  let oc = Out_channel.open_gen [ Open_append ] 0o666 diffs_file in
   Printf.fprintf oc "Diffs for file %s\n%s\n" fname diff;
   close_out oc
 ;;
 
 let diff_log f fgen =
   let diff_result = diff f fgen in
-  if String.equal diff_result ""
-  then ()
-  else (
+  if not @@ String.equal diff_result ""
+  then (
     write_diff f diff_result;
     add_promote f fgen)
 ;;
